# spicygoat

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  LICENSE  Server.cpp  Server.h  TCPConnection.cpp  TCPConnection.h  TCPServer.cpp  TCPServer.h  build.sh  main.cpp  protocol.h  requirements.txt
config/: Config.h
data/: CMakeLists.txt  blocks.py  build.py  items.py  properties.py  util.py
entities/: Entity.cpp  Entity.h  EntityPlayer.cpp  EntityPlayer.h
include/spicygoat/: Server.h  TCPConnection.h  TCPServer.h  data  protocol.h
include/spicygoat/block/: Block.h  BlockRegistry.h  BlockState.h  BlockTrait.h  traits.h  types.h
include/spicygoat/bossbar/: BossBar.h
include/spicygoat/commands/: Command.h  CommandEngine.h
include/spicygoat/config/: Config.h
include/spicygoat/entities/: Entity.h  EntityMetadata.h  EntityType.h  types.h
include/spicygoat/events/: EntityCollisionEvent.h  EntityEvent.h  Event.h  PlayerChatMessageEvent.h  PlayerEvent.h  PlayerJoinEvent.h  PlayerUseItemEvent.h  PluginMessageEvent.h
include/spicygoat/inventory/: PlayerInventory.h
include/spicygoat/item/: BlockItem.h  Item.h  ItemRegistry.h  ItemStack.h  types.h
include/spicygoat/persist/: PlayerData.h
include/spicygoat/plugins/: Plugin.h  PluginManager.h
include/spicygoat/protocol/: ClientBoundPacket.h  Packet.h  PacketData.h  PacketListener.h  ServerBoundPacket.h  packets.h
include/spicygoat/scheduler/: Scheduler.h  Task.h
include/spicygoat/tags/: Tag.h
include/spicygoat/tracking/: EntityTracker.h  PlayerTracker.h
include/spicygoat/util/: BlockPlaceContext.h  Enum.h  GameMode.h  Identifier.h  PlayerAbilities.h  Registry.h  except.h  math.h  md5.h  stl_util.h  uuid.h
include/spicygoat/world/: World.h
inventory/: PlayerInventory.h
item/: ItemStack.h
network/: PacketListener.h  PacketListenerHandshake.cpp  PacketListenerHandshake.h  PacketListenerLogin.cpp  PacketListenerLogin.h  PacketListenerPlay.cpp  PacketListenerPlay.h  PacketListenerStatus.cpp  PacketListenerStatus.h
network/listeners/: HandshakeListener.cpp  HandshakeListener.h  LoginListener.cpp  LoginListener.h  PlayerConnection.cpp  PlayerConnection.h  StatusListener.cpp  StatusListener.h
packaging/: AppImageBuilder.yml  spicygoat.desktop
packaging/archlinux/: PKGBUILD
protocol/: ConnectionState.h  PacketData.cpp  PacketData.h  ProtocolState.h  packets.cpp  packets.h
protocol/channels/: ChannelMessage.cpp  ChannelMessage.h
protocol/channels/minecraft/: CMBrand.cpp  CMBrand.h
protocol/packets/: ClientBoundPacket.cpp  ClientBoundPacket.h  Packet.cpp  Packet.h  ServerBoundPacket.cpp  ServerBoundPacket.h  enum.h
protocol/packets/handshake/: PacketHandshake.cpp  PacketHandshake.h
protocol/packets/login/: PacketLoginStart.cpp  (+5 more)
src/: CMakeLists.txt  Server.cpp  Server.h  TCPConnection.cpp  TCPConnection.h  TCPServer.cpp  TCPServer.h  main.cpp
src/block/: Block.cpp  Block.h  BlockRegistry.h  BlockState.cpp  BlockState.h  BlockTrait.h  traits.h  types.h
src/bossbar/: BossBar.cpp  BossBar.h
src/commands/: Command.h  CommandEngine.h
src/config/: Config.h
src/entities/: Entity.cpp  Entity.h  EntityMetadata.h  EntityPlayer.cpp  EntityPlayer.h  EntityType.h  types.h
src/events/: Event.cpp  Event.h  PlayerChatMessageEvent.h  PlayerEvent.h  PlayerJoinEvent.h  PluginMessageEvent.h
src/inventory/: PlayerInventory.cpp  PlayerInventory.h
src/item/: BlockItem.cpp  BlockItem.h  Item.cpp  Item.h  ItemRegistry.cpp  ItemRegistry.h  ItemStack.h
src/network/: PacketListener.h  PacketListenerHandshake.cpp  PacketListenerHandshake.h  PacketListenerLogin.cpp  PacketListenerPlay.cpp  PacketListenerPlay.h  PacketListenerStatus.cpp
src/persist/: PlayerData.cpp  PlayerData.h
src/plugins/: Plugin.cpp  Plugin.h  PluginManager.cpp  PluginManager.h
src/protocol/: PacketData.cpp  PacketData.h  packets.cpp  packets.h
src/reports/: blocks.h
src/scheduler/: Scheduler.cpp
src/tags/: Tag.h
src/tracking/: EntityTracker.cpp  EntityTracker.h  PlayerTracker.cpp  PlayerTracker.h
src/util/: BlockPlaceContext.h  GameMode.h  Random.h  Registry.h  math.h  md5.cpp  uuid.h
src/world/: World.cpp  World.h
tools/: make_enum.py
tracking/: EntityTracker.cpp  EntityTracker.h  PlayerTracker.cpp  PlayerTracker.h
util/: Registry.h  endian.h
world/: Location.cpp  Location.h  Position.cpp  Position.h  World.cpp  World.h
world/blocks/: BlockState.cpp  BlockState.h
world/chunks/: Chunk.cpp  Chunk.h  ChunkColumn.cpp  ChunkColumn.h  ChunkPalette.cpp  ChunkPalette.h  Region.cpp  Region.h
world/geo/: Face.h  Location.cpp  Location.h  Position.cpp  Position.h  Position2D.cpp  Position2D.h
(+365 files in other folders)
